--- a/src/app/components/BannerSection/bannerSection.module.css
+++ b/src/app/components/BannerSection/bannerSection.module.css
@@ -1,16 +1,18 @@
-.banner{
+.banner {
     justify-content: flex-start;
     height: calc(56.25rem - var(--header-height));
     align-items: end;
     padding-bottom: 8rem;
 }
-.bannerInfos{
+
+.bannerInfos {
     z-index: 3;
     position: relative;
     flex-direction: column;
     max-width: 38rem;
 }
-.bannerImage{
+
+.bannerImage {
     position: absolute;
     top: 0;
     z-index: 1;
@@ -20,6 +22,7 @@
     object-fit: cover;
     object-position: top;
 }
+
 .bannerInfosTitle {
     text-transform: uppercase;
     width: 100%;
@@ -30,6 +33,7 @@
     font-weight: 800;
     max-width: 34.5rem;
 }
+
 .bannerInfosTitle::after {
     content: '';
     width: 20rem;
@@ -38,11 +42,13 @@
     bottom: -0.625rem;
     right: 0;
 }
-.bannerInfosSubtitle{
+
+.bannerInfosSubtitle {
     font-size: 2.75rem;
     font-weight: 700;
     margin-bottom: 2rem;
 }
+
 .bannerInfosPhrase {
     font-size: 1.25rem;
     font-weight: 500;
@@ -50,6 +56,7 @@
     color: var(--grey-300);
     margin-bottom: 2rem;
 }
+
 .bannerInfosButton {
     height: 3.375rem;
     border: none;
@@ -63,10 +70,17 @@
     color: var(--grey-800);
     cursor: pointer;
     column-gap: 0.5rem;
+    transition: opacity 0.3s ease-in-out;
 }
+
+.bannerInfosButton:hover {
+    opacity: 0.7;
+}
+
 .bannerInfosLinks {
     column-gap: 1.5rem;
 }
+
 .bannerInfosLinkItem {
     border-radius: 2rem;
     background-color: var(--grey-600);
