--- a/src/app/components/Menu/menu.module.css
+++ b/src/app/components/Menu/menu.module.css
@@ -6,16 +6,35 @@
     z-index: 2;
     position: relative;
 }
+
 .menuItem {
     font-weight: 700;
     font-size: 1.25rem;
     padding-bottom: 1rem;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
 }
+
 .menuItemHome {
-    color:  var(--primary-color);
+    color: var(--primary-color);
     flex-direction: column;
 }
+
 .menuItemHome::before {
+    content: '';
+    font-size: 0;
+    height: 0.375rem;
+    width: 0.375rem;
+    background: var(--primary-color);
+    border-radius: 0.375rem;
+    margin-bottom: 0.25rem;
+}
+
+.menuItem:hover {
+    color: var(--primary-color);
+}
+
+.menuItem:hover::before {
     content: '';
     font-size: 0;
     height: 0.375rem;
