--- a/src/app/components/ProjectsSection/projectsSection.module.css
+++ b/src/app/components/ProjectsSection/projectsSection.module.css
@@ -57,20 +57,14 @@
     right: calc(50% - 2rem);
 }
 
-.projectsCardsContainer {
-    gap: 2rem;
-    flex-wrap: wrap;
-}
-
 .projectsCard {
-    max-width: 25.75rem;
     background-color: var(--grey-700);
     border-radius: 0.625rem;
+    width: 25rem;
 }
 
 .projectsCardImage {
-    max-width: 100%;
-    width: 24rem;
+    width: 100%;
     height: 12.5rem;
     border-top-left-radius: 0.625rem;
     border-top-right-radius: 0.625rem;
