--- a/src/app/components/ContactSection/contact.module.css
+++ b/src/app/components/ContactSection/contact.module.css
@@ -54,3 +54,20 @@
     width: 40%;
     margin-top: 4rem;
 }
+
+@media screen and (max-width:64rem) {
+    .contactCard {
+        width: calc(100% - 4rem);
+        padding: 1rem 2rem;
+        height: 26rem;
+        row-gap: 1rem;
+    }
+
+    .contactCardTitle {
+        font-size: 1.5rem;
+    }
+
+    .contactCardItem {
+        column-gap: .75rem;
+    }
+}
