--- a/src/app/components/Menu/menu.module.css
+++ b/src/app/components/Menu/menu.module.css
@@ -20,16 +20,6 @@
     flex-direction: column;
 }
 
-.menuItemHome::before {
-    content: '';
-    font-size: 0;
-    height: 0.375rem;
-    width: 0.375rem;
-    background: var(--primary-color);
-    border-radius: 0.375rem;
-    margin-bottom: 0.25rem;
-}
-
 .menuItem:hover {
     color: var(--primary-color);
 }
@@ -42,4 +32,45 @@
     background: var(--primary-color);
     border-radius: 0.375rem;
     margin-bottom: 0.25rem;
+}
+
+@media screen and (min-width: 64rem) {
+    .menuItemHome::before {
+        content: '';
+        font-size: 0;
+        height: 0.375rem;
+        width: 0.375rem;
+        background: var(--primary-color);
+        border-radius: 0.375rem;
+        margin-bottom: 0.25rem;
+    }
+}
+
+@media screen and (max-width: 64rem) {
+    .menu {
+        align-items: center;
+        justify-content: flex-start;
+        z-index: 4;
+    }
+
+    .menuHamburger {
+        background-color: transparent;
+        border: none;
+        z-index: 5;
+    }
+
+    .menuMobile {
+        background-color: var(--grey-800);
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 6rem 1.5rem 4rem 1.5rem;
+        width: 100%;
+        border: none;
+        box-shadow: none;
+        color: var(--white-900);
+    }
 }
