--- a/src/app/components/ProjectsSection/projectsSection.module.css
+++ b/src/app/components/ProjectsSection/projectsSection.module.css
@@ -4,33 +4,6 @@
     position: relative;
 }
 
-.projectsWrapper::before {
-    content: '';
-    position: absolute;
-    right: 0;
-    top: 0;
-    background: var(--grey-700);
-    width: 32rem;
-    height: 32rem;
-    border-bottom-left-radius: 86rem;
-    z-index: 1;
-    overflow: hidden;
-}
-
-.projectsWrapper::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: var(--grey-700);
-    width: 26rem;
-    height: 36rem;
-    border-bottom-right-radius: 32rem;
-    border-top-right-radius: 32rem;
-    z-index: 1;
-    overflow: hidden;
-}
-
 .projectsContainer {
     margin: 8rem auto;
     max-width: 81rem;
@@ -61,6 +34,7 @@
     background-color: var(--grey-700);
     border-radius: 0.625rem;
     width: 25rem;
+    max-width: 100%;
 }
 
 .projectsCardImage {
@@ -110,4 +84,44 @@
     font-weight: 600;
     color: var(--grey-100);
     padding-right: 0.375rem;
+}
+
+@media screen and (max-width: 64rem) {
+    .projectsContainer {
+        margin: 4rem auto;
+    }
+
+    .projectsTitle {
+        font-size: 1.5rem;
+    }
+
+}
+
+@media screen and (min-width: 64rem) {
+    .projectsWrapper::before {
+        content: '';
+        position: absolute;
+        right: 0;
+        top: 0;
+        background: var(--grey-700);
+        width: 32rem;
+        height: 32rem;
+        border-bottom-left-radius: 86rem;
+        z-index: 1;
+        overflow: hidden;
+    }
+
+    .projectsWrapper::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        background: var(--grey-700);
+        width: 26rem;
+        height: 36rem;
+        border-bottom-right-radius: 32rem;
+        border-top-right-radius: 32rem;
+        z-index: 1;
+        overflow: hidden;
+    }
 }
