--- a/src/app/components/SkillsSection/skillsSection.module.css
+++ b/src/app/components/SkillsSection/skillsSection.module.css
@@ -44,3 +44,29 @@
     font-weight: 600;
     color: var(--grey-200);
 }
+
+@media screen and (max-width:64rem) {
+    .skillsTitle {
+        font-size: 1.5rem;
+    }
+
+
+    .skillsItems {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1.5rem
+    }
+
+    .skillsItemText {
+        font-size: 1.25rem;
+    }
+
+    .skillsItemImage {
+        width: 1.875rem;
+        height: 1.875rem;
+    }
+
+    .skillsItem {
+        column-gap: 0.75rem;
+    }
+
+}
